Fix submit button alignment in 350px screen

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -436,14 +436,16 @@ footer p {
 @media screen and (max-width: 700px) {
 
     #signup-section {
-        padding: 50% 0 80px 0;
+        padding: 150px 0 80px 0;
     }
 
     #signup-form {
         width: 90%;
+        height: 380px;
     }
 
     #join-button {
-        padding-bottom: 20px;
+        width: 50%;
+        padding: 20px 0;
     }
 }
